--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VictoriaActivity">
-
-        </activity>
-        <activity android:name=".CajaShakiraActivity"></activity>
-        <activity android:name=".CajaActivity">
+        <activity android:name=".MenuDeEntradaALaAPP"
+            android:label="MENU DE ACTIVIDADES">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".VictoriaActivity"></activity>
+        <activity android:name=".CajaShakiraActivity" />
+        <activity android:name=".CajaActivity">
 
         </activity>
         <activity android:name=".ImagenActivity" />
